@@ -77,17 +77,43 @@
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcpkix-jdk18on</artifactId>
-      <version>1.79</version>
+      <version>1.80</version>
     </dependency>
 
 
     <dependency>
       <groupId>org.apache.httpcomponents.client5</groupId>
       <artifactId>httpclient5</artifactId>
-      <version>5.4.1</version>
+      <version>5.5</version>
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-server</artifactId>
+      <version>3.7.4-YTDB-20250618.095831-3</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.tinkerpop</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-util</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-driver</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>fluent-hc</artifactId>
@@ -105,17 +131,18 @@
       <properties>
         <argLine>
           -ea
+          -Xms${heapSize}
           -Xmx${heapSize}
-          -Dstorage.diskCache.bufferSize=4096
-          -Dsecurity.userPasswordSaltIterations=10
-          -Dmemory.directMemory.trackMode=true
+          -Dyoutrackdb.storage.diskCache.bufferSize=4096
+          -Dyoutrackdb.security.userPasswordSaltIterations=10
+          -Dyoutrackdb.memory.directMemory.trackMode=true
           -Djava.util.logging.manager=com.jetbrains.youtrack.db.internal.common.log.ShutdownLogManager
-          -Dstorage.diskCache.checksumMode=storeAndThrow
-          -Dsecurity.warningDefaultUsers=false
-          -Dtx.nonTxReadsWarningMode=SILENT
-          -Dfile.log.deletion=false
+          -Dyoutrackdb.storage.diskCache.checksumMode=StoreAndThrow
+          -Dyoutrackdb.security.warningDefaultUsers=false
+          -Dyoutrackdb.file.log.deletion=false
           --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
           --add-opens java.base/sun.security.x509=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
         </argLine>
       </properties>
     </profile>
@@ -213,6 +240,7 @@
         <configuration>
           <systemPropertyVariables>
             <buildDirectory>${project.build.directory}</buildDirectory>
+            <build.dir>${project.build.directory}</build.dir>
           </systemPropertyVariables>
           <excludes>
             <exclude>${exclude.test.1}</exclude>
